--- a/main.css
+++ b/main.css
@@ -150,3 +150,73 @@
 #tag {
   display: flex;
 }
+
+/* recipe item */
+
+.container-item__recipe {
+  list-style: none;
+  border-radius: 5px;
+  margin-top: 40px;
+}
+
+.container-item__div {
+  justify-content: space-between;
+}
+
+.divEmpty {
+  background-color: #c7bebe;
+  height: 178px;
+  border-radius: 5px 5px 0 0;
+}
+
+.recipe {
+  line-height: 1.2;
+  background-color: #e7e7e7;
+  height: 202px;
+  border-radius: 0 0 5px 5px;
+  padding: 0 15px 0 15px;
+}
+
+.recipe__header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.recipe__explanation {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  font-size: 12px;
+}
+
+.recipe__header h3,
+.recipe__header span {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.recipe__header span {
+  font-weight: 700;
+}
+
+.recipe__ingrédients {
+  width: 171px;
+  height: 105px;
+  font-weight: 800;
+}
+
+.recipe__ingrédients span {
+  font-weight: 600;
+}
+
+.recipe__description {
+  width: 171px;
+  height: 114px;
+  font-weight: 600;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 8;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+}
